--- a/free-nodes/2024-2-19-free-node-subscribe-links.htm
+++ b/free-nodes/2024-2-19-free-node-subscribe-links.htm
@@ -130,6 +130,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-4-6-shadowrocket-node.htm">4月6日更新20.7M/S，2024年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点</a></h4>
+                <p>这一次的节点更新覆盖了日本、韩国、加拿大、欧洲、香港、美国、新加坡等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
                 <h4><a href="/free-nodes/2024-4-5-node-share-links.htm">4月5日更新20.1M/S，2024年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点</a></h4>
                 <p>这一次的节点更新覆盖了香港、新加坡、美国、欧洲、加拿大、日本、韩国等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
@@ -216,23 +226,13 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         </div>
     </div>
 </div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-3-27-free-shadowrocket-node.htm">3月27日更新22.9M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点</a></h4>
-                <p>这一次的节点更新覆盖了韩国、日本、欧洲、美国、新加坡、香港、加拿大等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
 
 <h3 class="title-big mb-sm-3 mb-3">归纳</h3>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2024-04/" title="2024-04 归档">2024-04</a></h4>
+                                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2024-04/" title="2024-04 归档">2024-04</a></h4>
                                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-03/" title="2024-03 归档">2024-03</a></h4>
                                 <h4><span class="badge" style="float: right;">16</span> <a href="/date/2024-02/" title="2024-02 归档">2024-02</a></h4>
                             </div>
