--- a/date/2024-04/index.htm
+++ b/date/2024-04/index.htm
@@ -89,6 +89,23 @@
                                 <div class="row">
                     <div class="col-lg-4">
                         <div class="position-relative">
+                            <a href="/free-nodes/2024-4-11-free-ssr-node.htm">
+                                <img src="https://clashnode.github.io/uploads/20240214/2185035859b7710c0e4307b2d9117bf7.webp" alt="4月11日更新23M/S，2024年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点" class="radius-image img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 mt-lg-0 mt-5">
+                        <a href="/free-nodes/2024-4-11-free-ssr-node.htm">
+                            <h3 class="title-big">4月11日更新23M/S，2024年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点</h3>
+                        </a>
+                        <p class="mt-4">这一次的节点更新覆盖了加拿大、新加坡、韩国、欧洲、香港、日本、美国等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        <p class="title-small mb-2 pull-right">
+                            4月11日                        </p>
+                    </div>
+                </div>
+                                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="position-relative">
                             <a href="/free-nodes/2024-4-10-free-subscribe-node.htm">
                                 <img src="https://clashnode.github.io/uploads/20240214/80e1ae8826f43c44269c88a9b207db4c.webp" alt="4月10日更新21.9M/S，2024年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点" class="radius-image img-fluid">
                             </a>
@@ -239,27 +256,20 @@
                             4月2日                        </p>
                     </div>
                 </div>
-                                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="position-relative">
-                            <a href="/free-nodes/2024-4-1-free-ssr-node.htm">
-                                <img src="https://clashnode.github.io/uploads/20240214/1694a934d953b0dc61fe40ac4034f27c.webp" alt="4月1日更新23M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点" class="radius-image img-fluid">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-8 mt-lg-0 mt-5">
-                        <a href="/free-nodes/2024-4-1-free-ssr-node.htm">
-                            <h3 class="title-big">4月1日更新23M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点</h3>
-                        </a>
-                        <p class="mt-4">这一次的节点更新覆盖了新加坡、欧洲、香港、韩国、加拿大、日本、美国等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        <p class="title-small mb-2 pull-right">
-                            4月1日                        </p>
-                    </div>
-                </div>
                 
-                            </div>
+                <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2024-04/page-2.htm">2</a></li> <li><a href="/date/2024-04/page-2.htm">&raquo;</a></li></ul>            </div>
             <div class="col-md-4 w3l-services">
                 <h3 class="title-big mb-sm-3 mb-3">热门文章</h3>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-4-11-free-ssr-node.htm">4月11日更新23M/S，2024年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、韩国、欧洲、香港、日本、美国等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
@@ -350,23 +360,13 @@
         </div>
     </div>
 </div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-4-1-free-ssr-node.htm">4月1日更新23M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、欧洲、香港、韩国、加拿大、日本、美国等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
 
 <h3 class="title-big mb-sm-3 mb-3">归纳</h3>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">10</span> <a href="/date/2024-04/" title="2024-04 归档">2024-04</a></h4>
+                                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2024-04/" title="2024-04 归档">2024-04</a></h4>
                                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-03/" title="2024-03 归档">2024-03</a></h4>
                                 <h4><span class="badge" style="float: right;">16</span> <a href="/date/2024-02/" title="2024-02 归档">2024-02</a></h4>
                             </div>
